add divClass property to AutoComplete

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link href="index.css" rel="stylesheet"></link>
+
 </head>
 
 <body>
@@ -16,6 +18,18 @@
 
     <input id="testbutton" type="button" value="click me"/>
 
+    <div>
+        <select class="autocompleter" size="6">
+          <option>Here is the unstyled select box</option>
+          <option>The second option</option>
+          <option>The third option</option>
+          <option>The third4 option</option>
+          <option>The third5 option</option>
+          <option>The third6 option</option>
+        </select>
+      </div>    
+
+    <br>      
     <br>
     <input/>
     
